# 271-UK-Create

./: .gitignore  LICENSE  README.md  build.sh  gradle.properties  index.html
.github/workflows/: pages.yml
data/: .gitattributes
mods/foodspoilage/: build.gradle  gradle.properties  settings.gradle
mods/foodspoilage/src/main/java/com/foodspoilage/: FoodSpoilage.java
mods/foodspoilage/src/main/java/com/foodspoilage/client/: FoodSpoilageClient.java  IceboxScreen.java  TooltipHandler.java
mods/foodspoilage/src/main/java/com/foodspoilage/config/: FoodSpoilageConfig.java
mods/foodspoilage/src/main/java/com/foodspoilage/event/: FoodSpoilageEvents.java
mods/foodspoilage/src/main/resources/: foodspoilage.mixins.json
mods/ukgeo/: README.md  gradle.properties  settings.gradle
mods/ukgeo-neoforge/: README.md  build.gradle  gradle.properties  settings.gradle
mods/vanillaadjust/: build.sh  gradle.properties
mods/vanillaadjust/src/main/resources/: vanilla_adjustments.mixins.json
src/main/java/git/zenyfh/mapcreator/: Config.java  Mapcreator.java
src/main/resources/assets/mapcreator/lang/: en_us.json
tools/hoverpreview-tools/: README.md  build_hover_binaries.sh  generate_hover_previews.sh  open_hover_map.sh  pyproject.toml  ukgeo-hover-linux.spec  ukgeo-hover.spec
tools/hoverpreview-tools/site/: app.js  index.html  styles.css
tools/hoverpreview-tools/src/hoverpreview_tools/: __init__.py  cli.py  hover.py  hover_previews.py  launcher.py
tools/hoverpreview-tools/tests/: test_hover.py
tools/ukgeo-tools/: .gitignore  README.md  generate_previews.sh  open_hover_map.sh  pyproject.toml  rebuild_uk_world_data_gb.sh
tools/ukgeo-tools/docs/: iron_ore_data.md
tools/ukgeo-tools/examples/: ore_rules.yml  ore_rules_625k.yml  surface_geology_625k.yml
tools/ukgeo-tools/src/ukgeo/: asc.py  bgs.py  cli.py  coal.py  coords.py  gold.py  height.py  hover.py  landmask.py  manifest.py  ni_height.py  ores.py  preview.py  rivers.py  surface.py  tiles.py  validate.py  vegetation.py
tools/ukgeo-tools/tests/: test_asc.py  test_coal.py  test_coords.py  test_gold.py  test_iron_rules.py  test_manifest.py  test_preview.py  test_tiles.py  test_vegetation.py
tools/ukgeo-tools/uk_world_data_gb/hoverpreviews/: hover_manifest.json
(+81 files in other folders)
